tests/codegen/fail/union/struct_non_object_variant.stderr
error[E0277]: the trait bound `Test: GraphQLObject<__S>` is not satisfied
  --> fail/union/struct_non_object_variant.rs:10:14
   |
10 | #[graphql(on Test = Character::a)]
   |              ^^^^ unsatisfied trait bound
   |
help: the trait `GraphQLObject<__S>` is not implemented for `Test`
  --> fail/union/struct_non_object_variant.rs:4:1
   |
 4 | pub enum Test {
   | ^^^^^^^^^^^^^
help: the trait `GraphQLObject<__S>` is implemented for `EnumValue`
  --> $WORKSPACE/juniper/src/schema/schema.rs
   |
   | #[graphql_object]
   | ^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `graphql_object` (in Nightly builds, run with -Z macro-backtrace for more info)
